--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script type="text/javascript" src="js/modernizr.custom.46884.js"></script>
 		<!-- CSS only -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+		
 		<!-- JS, Popper.js, and jQuery -->
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -22,89 +22,93 @@
 	</head>
 	<body>
 		<div class="container">
-			<img class="iitlogo" src="images/iitlogo.png">
-			<h1>Career Development and Corporate Relations Center <span>Indian Institute of Technology, Ropar</span></h1>
-			
-		<div class="btn-grp">
-			<button class="btn btn-outline-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</button>
-			<div class="dropdown-menu" x-placement="bottom-start" style="position:absolute; will-change: transform; top: 0px;left: 0px;transform: translate3d(0px,38px,0px);">
-				<a href="#" class="dropdown-item">From Director's Desk</a>
-				<a href="#" class="dropdown-item">Role Of CDCRC</a>
-				<a href="#" class="dropdown-item">Structure Of CDCRC</a>
-
+			<div class="heading">
+				<img class="iitlogo" src="images/iitlogo.png">
+				<h1>Career Development and Corporate Relations Center <span>Indian Institute of Technology, Ropar</span></h1>
 			</div>
-			<button class="btn btn-outline-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">For Comapnies</button>
-			<div class="dropdown-menu" x-placement="bottom-start" style="position:absolute; will-change: transform; top: 0px;left: 0px;transform: translate3d(0px,38px,0px);">
-				<a href="#" class="dropdown-item">Training And Placement</a>
-				<a href="#" class="dropdown-item">Corporate Relations</a>
+			
+			<div class="btn-grp">
+				<button class="btn btn-outline-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</button>
+				<div class="dropdown-menu" x-placement="bottom-start" style="position:absolute; will-change: transform; top: 0px;left: 0px;transform: translate3d(0px,38px,0px);">
+					<a href="#" class="dropdown-item">From Director's Desk</a>
+					<a href="#" class="dropdown-item">Role Of CDCRC</a>
+					<a href="#" class="dropdown-item">Structure Of CDCRC</a>
+
+				</div>
+				<button class="btn btn-outline-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">For Comapnies</button>
+				<div class="dropdown-menu" x-placement="bottom-start" style="position:absolute; will-change: transform; top: 0px;left: 0px;transform: translate3d(0px,38px,0px);">
+					<a href="#" class="dropdown-item">Training And Placement</a>
+					<a href="#" class="dropdown-item">Corporate Relations</a>
 
 			</div>
 
 
 		</div>			
 
-			<div class="wrapper">
 
-				<ul id="sb-slider" class="sb-slider">
-					<li>
-						<img src="images/IITrpr_2_2.jpg" alt="image1"/>
-						<div class="sb-description">
-							<h3>Welcome to Indian Institute Of Technology, Ropar</h3>
-						</div>
-					</li>
-					<li>
-						<img src="images/iitrpr1_1.jpg" alt="image2"/>
-						<div class="sb-description">
-							<h3>Honest Entertainer</h3>
-						</div>
-					</li>
-					<li>
-						<img src="images/3.jpg" alt="image1"/>
-						<div class="sb-description">
-							<h3>Brave Astronaut</h3>
-						</div>
-					</li>
-					<li>
-						<img src="images/4.jpg" alt="image1"/>
-						<div class="sb-description">
-							<h3>Affectionate Decision Maker</h3>
-						</div>
-					</li>
-					<li>
-						<img src="images/5.jpg" alt="image1"/>
-						<div class="sb-description">
-							<h3>Faithful Investor</h3>
-						</div>
-					</li>
-					<li>
-						<img src="images/6.jpg" alt="image1"/>
-						<div class="sb-description">
-							<h3>Groundbreaking Artist</h3>
-						</div>
-					</li>
-					<li>
-						<img src="images/7.jpg" alt="image1"/>
-						<div class="sb-description">
-							<h3>Selfless Philantropist</h3>
-						</div>
-					</li>
-				</ul>
+		<div class="wrapper">
 
-				<div id="shadow" class="shadow"></div>
+			<ul id="sb-slider" class="sb-slider">
+				<li>
+					<img src="images/IITrpr_2_2.jpg" alt="image1"/>
+					<div class="sb-description">
+						<h3>Welcome to Indian Institute Of Technology, Ropar</h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/iitrpr1_1.jpg" alt="image2"/>
+					<div class="sb-description">
+						<h3>Honest Entertainer</h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/3.jpg" alt="image3"/>
+					<div class="sb-description">
+						<h3>Brave Astronaut</h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/4.jpg" alt="image4"/>
+					<div class="sb-description">
+						<h3>Affectionate Decision Maker</h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/5.jpg" alt="image5"/>
+					<div class="sb-description">
+						<h3>Faithful Investor</h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/6.jpg" alt="image6"/>
+					<div class="sb-description">
+						<h3>Groundbreaking Artist</h3>
+					</div>
+				</li>
+				<li>
+					<img src="images/7.jpg" alt="image7"/>
+					<div class="sb-description">
+						<h3>Selfless Philantropist</h3>
+					</div>
+				</li>
+			</ul>
 
-				<div id="nav-dots" class="nav-dots">
-					<span class="nav-dot-current"></span>
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
+			<div id="shadow" class="shadow"></div>
 
-			</div><!-- /wrapper -->
+			<div id="nav-dots" class="nav-dots">
+					<span class="nav-dot-current" data-id=1></span>
+					<span data-id=2></span>
+					<span data-id=3></span>
+					<span data-id=4></span>
+					<span data-id=5></span>
+					<span data-id=6></span>
+					<span data-id=7></span>
+			</div>
+
+		</div><!-- /wrapper -->
 
 		</div>
+		<script src="./js/index.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.slicebox.js"></script>
 		<script type="text/javascript">
